--- a/inman-tesla/src/styles/section.css
+++ b/inman-tesla/src/styles/section.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  scroll-snap-align: start;
 }
 .car-info {
   padding-top: 15vh;
